SERVER-53376 Impose maximum lock timeout for dbHash